More improvements to particles
Greyscale map added, skyrim+ shaders added
Particles for Fallout4 start to work
init velocities improved